--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,13 +93,13 @@ margin-top: -200px;
 
     }
     .p2{
-        height: 100px;
-        margin-left: 77em;
+        height: 150px;
+        margin-left: 75em;
         margin-top: -400px;
     }
    
     .q-a{
-        margin-left: 19px;
+        margin-left: 8px;
        font-size: 15px;
        margin-top: 60px;
        width: 280px;
@@ -111,7 +111,8 @@ margin-top: -200px;
     }
     .container{
         height: 400px;
-        margin-top: 140px;
+       
+        margin: 140px 20px 20px 20px;
     }
 
 }
