--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,7 +86,7 @@ nav:hover{
 
 }
 }
-@media (max-width: 400px) {
+@media (min-width: 375px) and (max-width: 700px) {
     .p1{
     height: 10px;
 margin-top: -200px;
