--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,3 +116,14 @@ margin-top: -200px;
     }
 
 }
+
+@media (max-width: 479px){
+    .col-xxs-12{
+        width: 100%;
+       
+        position: relative;
+        min-height: 1px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
