--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,16 +114,19 @@ margin-top: -200px;
        
         margin: 140px 20px 20px 20px;
     }
-
+  
 }
 
 @media (max-width: 479px){
     .col-xxs-12{
         width: 100%;
-       
-        position: relative;
-        min-height: 1px;
-        padding-left: 15px;
-        padding-right: 15px;
+    }
+    .q-a{
+margin-left: 20px;
+margin-top: 100px;
+width: 15em;
+    }
+    .container{
+        height: 500px;
     }
 }
